objects/Case_Audit__c.object
<CustomObject><fields>
        <fullName>Account_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for audits</description>
        <label>Account Name</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Anticipated_problems__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for audits</description>
        <label>Anticipated problems</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Area__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for audits</description>
        <label>Area</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Article__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for audits</description>
        <label>Article</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Ask_pertinent_questions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for audits</description>
        <label>Ask pertinent questions</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Audit_Comments__c</fullName>
        <description>for auditor to add comments</description>
        <label>Audit Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Case_INformation_questions__c</fullName>
        <defaultValue>12</defaultValue>
        <description>hard coded number of Case info questions to calculate error rate</description>
        <label>Case Information questions</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Case_Information_Error__c</fullName>
        <formula>Case_Information_Errors__c /  Case_INformation_questions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Information Error %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Case_Information_Errors__c</fullName>
        <formula>IF(Customer_Name__c = FALSE, 0,1)+ 
if(Account_Name__c = FALSE, 0,1)+ 
if(Phone_Number__c = FALSE, 0,1)+ 
if(Email_Address__c = FALSE,0,1)+ 
if(License_Number_Product_and_Release__c = FALSE,0,1)+ 
if(Substatus__c = FALSE, 0,1)+ 
if(Status__c = FALSE, 0,1)+ 
if(Area__c = FALSE, 0,1)+ 
if(Environment__c = FALSE, 0,1)+ 
if(Article__c = FALSE, 0,1)+ 
if(Details__c = FALSE, 0,1)+
if (Topic_SubTopic__c = FALSE, 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Information Errors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Case_Owner__c</fullName>
        <formula>Case__r.Owner:User.FirstName + " " + Case__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>case look up to associate a Case Audit</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Audits</relationshipLabel>
        <relationshipName>Case_Audits</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Correct_Answer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for audits</description>
        <label>Correct Answer</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Customer_Communication_Error__c</fullName>
        <formula>Customer_Communication_Errors__c  /  Customer_Communication_questions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Communication Error %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Customer_Communication_Errors__c</fullName>
        <formula>IF(Email_Details__c = False, 0,1)+
if(Timely_Response__c = FALSE,0,1)+
if(Professionalism__c = FALSE, 0,1)+
if(Spelling_Grammar__c = FALSE,0,1)+
if(Ask_pertinent_questions__c = FALSE,0,1)+
if(Anticipated_problems__c = FALSE,0,1)+
if(Take_ownership__c = FALSE,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Communication Errors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Customer_Communication_questions__c</fullName>
        <defaultValue>7</defaultValue>
        <description>hard coded number of questions to use for error rate calculation</description>
        <label>Customer Communication questions</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Customer_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for audits</description>
        <label>Customer Name</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Details__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for audits</description>
        <label>Details</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Email_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for audits</description>
        <label>Email Address</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Email_Details__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for audits</description>
        <label>Email Details</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Environment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for audits</description>
        <label>Environment</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>First_contact_reason__c</fullName>
        <description>for audits</description>
        <label>First contact reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A&amp;A/EUS Information needed</fullName>
                </value>
                <value>
                    <fullName>Asking irrelevant information from customer/internal</fullName>
                </value>
                <value>
                    <fullName>Customer followed up about original issue</fullName>
                </value>
                <value>
                    <fullName>Customer refuses suggested support</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Incorrect response provided by Rep</fullName>
                </value>
                <value>
                    <fullName>Needed more information from customer to complete request</fullName>
                </value>
                <value>
                    <fullName>Customer followed up with a new question</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>First_contact_resolution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for audits</description>
        <label>First contact resolution</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>First_contact_resolution_percentage__c</fullName>
        <formula>if(First_contact_resolution__c = FALSE, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First contact resolution %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>License_Number_Product_and_Release__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for audits</description>
        <label>License Number / Product and Release</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Manager_Comments__c</fullName>
        <description>for audits</description>
        <inlineHelpText>for amanger to add comments on the audit</inlineHelpText>
        <label>Manager Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Manager_Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator if the manager has reviewed the Audit</description>
        <label>Manager Reviewed?</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Phone_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for audits</description>
        <label>Phone Number</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Policy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for audits</description>
        <label>Policy</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Procedure_and_Workflow_Error__c</fullName>
        <formula>Procedure_and_Workflow_Errors__c /  Procedure_and_workflow_questions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Procedure and Workflow Error %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Procedure_and_Workflow_Errors__c</fullName>
        <formula>If(Correct_Answer__c = FALSE, 0, 1)+
If(Policy__c = FALSE, 0, 1)+
if(Standards__c = FALSE, 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Procedure and Workflow Errors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Procedure_and_workflow_questions__c</fullName>
        <defaultValue>3</defaultValue>
        <description>hard coded number of procedure questions to calculate error %</description>
        <label>Procedure and workflow questions</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Professionalism__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for audits</description>
        <label>Professionalism</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Spelling_Grammar__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for audits</description>
        <label>Spelling / Grammar</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Standards__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for audits</description>
        <label>Standards</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for audits</description>
        <label>Status</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Substatus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for audits</description>
        <label>Substatus</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Take_ownership__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for audits</description>
        <label>Take ownership</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Timely_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for audits</description>
        <label>Timely Response</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Topic_SubTopic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Topic/SubTopic</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Total_Error__c</fullName>
        <formula>Total_Errors__c /  Total_Questions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Error %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Total_Errors__c</fullName>
        <formula>Customer_Communication_Errors__c + Case_Information_Errors__c + Procedure_and_Workflow_Errors__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Errors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Total_Questions__c</fullName>
        <defaultValue>22</defaultValue>
        <description>hard coded the number of audit questions</description>
        <label>Total Questions</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>used to audit Service Cases</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Private</externalSharingModel><label>Case Audit</label><nameField>
        <displayFormat>Audit {000000}</displayFormat>
        <label>Case Audit Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Case Audits</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility></CustomObject>